<resources>
    <string name="app_name">Shoping Cart</string>
    <string name="add_item">Add Item</string>
    <string name="bread">Bread</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="rice">Rice</string>
    <string name="butter">Butter</string>
    <string name="eggs">Eggs</string>
    <string name="cheese">Cheese</string>
    <string name="apples">Apples</string>
    <string name="oranges">Oranges</string>
    <string name="bananas">Bananas</string>
</resources>